@@ -1,3 +1,6 @@
+Mon, 10 Apr 2006 18:44:48 +0200 <thp@perli.net>
+	* Added "Released" column to available podcasts list
+
 Mon, 10 Apr 2006 09:48:00 +0200 <thp@perli.net>
 	* Updated TODO list
 
